--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
             gap: 10px;
         }
 
+        .login-container .logo-container {
+            margin-bottom: 30px; /* Ajuste para aumentar o espaço entre a logo e o campo de email */
+        }
+
         .logo-img {
             width: 60px;
             height: 60px;
@@ -235,7 +239,7 @@
             box-shadow: none;
             padding: 5px;
             cursor: pointer;
-            z-index: 100;
+            z-index: 1000; /* Aumentado para evitar sobreposição */
         }
 
         .admin-button:hover {
