--- a/NBA.html
+++ b/NBA.html
@@ -631,13 +631,13 @@
             color: #06B6D4;
         }
 
-        .injuries-grid, .bets-grid {
+        .injuries-grid, .bets-grid, .betbuilder-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             gap: 16px;
         }
 
-        .injury-team, .bet-item {
+        .injury-team, .bet-item, .betbuilder-item {
             display: flex;
             align-items: center;
             gap: 12px;
@@ -648,13 +648,13 @@
             box-shadow: 0 1px 6px rgba(0, 0, 0, 0.2);
         }
 
-        .injury-team:hover, .bet-item:hover {
+        .injury-team:hover, .bet-item:hover, .betbuilder-item:hover {
             background: linear-gradient(45deg, #2A2A2A, #333333);
             transform: translateY(-2px);
             box-shadow: 0 4px 12px rgba(107, 33, 168, 0.2);
         }
 
-        .injury-icon, .bet-icon {
+        .injury-icon, .bet-icon, .betbuilder-icon {
             font-size: 20px;
         }
 
@@ -662,15 +662,15 @@
             color: #EF4444;
         }
 
-        .bet-icon {
-            color: #06B6D4;
+        .bet-icon, .betbuilder-icon {
+            color: #FBBF24;
         }
 
-        .injury-info, .bet-info {
+        .injury-info, .bet-info, .betbuilder-info {
             flex-grow: 1;
         }
 
-        .injury-info .name, .bet-info .type {
+        .injury-info .name, .bet-info .type, .betbuilder-info .type {
             display: block;
             font-size: 14px;
             font-weight: 600;
@@ -682,9 +682,39 @@
             color: #EF4444;
         }
 
-        .injury-info .date, .bet-info .value {
+        .injury-info .date, .bet-info .value, .betbuilder-info .value {
             font-size: 12px;
             color: #A1A1AA;
+        }
+
+        .betbuilder-container {
+            padding: 20px;
+            background: #1A1A1A;
+            border-radius: 12px;
+            margin-bottom: 20px;
+            box-shadow: 0 2px 12px rgba(0, 0, 0, 0.3);
+        }
+
+        .betbuilder-title {
+            font-family: 'Orbitron', sans-serif;
+            font-size: 20px;
+            text-align: center;
+            margin-bottom: 20px;
+            color: #FFFFFF;
+            letter-spacing: 1px;
+            text-transform: uppercase;
+            position: relative;
+        }
+
+        .betbuilder-title::after {
+            content: '';
+            position: absolute;
+            bottom: -4px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 60px;
+            height: 2px;
+            background: linear-gradient(90deg, transparent, #6B21A8, transparent);
         }
 
         .error-details {
@@ -791,6 +821,10 @@
                 <div class="section-title">Possíveis Entradas</div>
                 <div class="bets-grid" id="betsGrid"></div>
             </div>
+            <div class="section-container" id="betBuilderContainer">
+                <div class="betbuilder-title">Bet Builder Tips</div>
+                <div class="betbuilder-grid" id="betBuilderGrid"></div>
+            </div>
         </div>
     </div>
 
@@ -800,6 +834,7 @@
         const leadersGrid = document.querySelector('#leadersGrid');
         const injuriesGrid = document.querySelector('#injuriesGrid');
         const betsGrid = document.querySelector('#betsGrid');
+        const betBuilderGrid = document.querySelector('#betBuilderGrid');
         const scheduleDiv = document.querySelector('#schedule');
         let currentDate = null;
         let autoUpdateInterval = null;
@@ -813,6 +848,7 @@
         const statsContent = document.querySelector('#statsContent');
         const injuriesContainer = document.querySelector('#injuriesContainer');
         const betsContainer = document.querySelector('#betsContainer');
+        const betBuilderContainer = document.querySelector('#betBuilderContainer');
         const closeModalBtn = document.querySelector('#closeModal');
 
         function createParticles() {
@@ -865,6 +901,35 @@
             } catch (error) {
                 console.error('Error fetching injuries:', error);
                 throw error;
+            }
+        }
+
+        async function fetchBetBuilderTips(homeName, awayName, date) {
+            const homeSeo = homeName.toLowerCase().replace(/\s+/g, '-');
+            const awaySeo = awayName.toLowerCase().replace(/\s+/g, '-');
+            const formattedDate = date.replace(/-/g, '-');
+            const url = `https://www.sportsgambler.com/betting-tips/basketball/${homeSeo}-vs-${awaySeo}-prediction-bet-builder-tips-odds-${formattedDate}/#predictions`;
+            const proxyUrl = `https://api.allorigins.win/raw?url=${encodeURIComponent(url)}`;
+
+            try {
+                const response = await fetch(proxyUrl);
+                if (!response.ok) throw new Error(`HTTP error! Status: ${response.status}`);
+
+                const htmlText = await response.text();
+                const parser = new DOMParser();
+                const doc = parser.parseFromString(htmlText, 'text/html');
+
+                const betBuilderItems = doc.querySelectorAll('.betbuilder .bb_list .bb_list_item');
+                const tips = Array.from(betBuilderItems).map(item => {
+                    const type = item.children[0]?.textContent.trim() || 'N/A';
+                    const value = item.children[1]?.textContent.trim() || 'N/A';
+                    return { type, value };
+                });
+
+                return tips.length > 0 ? tips : [{ type: 'N/A', value: 'Nenhum dado disponível' }];
+            } catch (error) {
+                console.error('Error fetching Bet Builder Tips:', error);
+                return [{ type: 'Erro', value: 'Não foi possível carregar as dicas de apostas' }];
             }
         }
 
@@ -1121,6 +1186,9 @@
                 playerData = await fetchPlayerSeasonStats(eventId);
                 injuriesData = await fetchInjuries();
 
+                // Buscar as dicas de apostas (Bet Builder Tips)
+                const betBuilderTips = await fetchBetBuilderTips(homeName, awayName, currentDate);
+
                 modalTitle.textContent = `${homeName} vs ${awayName}`;
                 homeTeamName.textContent = homeName;
                 awayTeamName.textContent = awayName;
@@ -1302,6 +1370,17 @@
                     </div>
                 `).join('');
 
+                // Renderizar Bet Builder Tips
+                betBuilderGrid.innerHTML = betBuilderTips.map(tip => `
+                    <div class="betbuilder-item">
+                        <span class="betbuilder-icon">🎯</span>
+                        <div class="betbuilder-info">
+                            <span class="type">${tip.type}</span>
+                            <span class="value">${tip.value}</span>
+                        </div>
+                    </div>
+                `).join('');
+
                 // Render game stats
                 if ((statsData && (statsData.away || statsData.home)) || (playerData && (playerData.away || playerData.home))) {
                     const stats = isLiveOrFinished ? [
@@ -1321,7 +1400,7 @@
                         { label: '% DE ARREMESSOS CERTOS', home: statsData.home?.stats?.fieldGoalsPercentage ? `${(parseFloat(statsData.home.stats.fieldGoalsPercentage) * 100).toFixed(1)}%` : 'N/A', away: statsData.away.stats?.fieldGoalsPercentage ? `${(parseFloat(statsData.away.stats.fieldGoalsPercentage) * 100).toFixed(1)}%` : 'N/A' },
                         { label: '% DE LANCES LIVRES', home: statsData.home?.stats?.freeThrowsPercentage ? `${(parseFloat(statsData.home.stats.freeThrowsPercentage) * 100).toFixed(1)}%` : 'N/A', away: statsData.away.stats?.freeThrowsPercentage ? `${(parseFloat(statsData.away.stats.freeThrowsPercentage) * 100).toFixed(1)}%` : 'N/A' },
                         { label: '% DE ARREMESSOS DE 3 PONTOS', home: statsData.home?.stats?.threePointPercentage ? `${(parseFloat(statsData.home.stats.threePointPercentage) * 100).toFixed(1)}%` : 'N/A', away: statsData.away.stats?.threePointPercentage ? `${(parseFloat(statsData.away.stats.threePointPercentage) * 100).toFixed(1)}%` : 'N/A' },
-                        { label: 'REBOTES POR JOGO', home: statsData.home?.stats?.reboundsPerGame || 'N/A', away: statsData.away?.stats?.reboundsPerGame || 'N/A' },
+                        { label: 'REBOTES POR JOGO', home: statsData.home?.stats?.reboundsPerGame || 'N/A', away: statsData.away.stats?.reboundsPerGame || 'N/A' },
                         { label: 'ASSISTÊNCIAS POR JOGO', home: statsData.home?.stats?.assistsPerGame || 'N/A', away: statsData.away?.stats?.assistsPerGame || 'N/A' },
                         { label: 'TOCOS POR JOGO', home: statsData.home?.stats?.blocksPerGame || 'N/A', away: statsData.away?.stats?.blocksPerGame || 'N/A' },
                         { label: 'ROUBOS DE BOLA POR JOGO', home: statsData.home?.stats?.stealsPerGame || 'N/A', away: statsData.away?.stats?.stealsPerGame || 'N/A' },
@@ -1360,6 +1439,7 @@
                 teamLeadersContainer.innerHTML = '';
                 injuriesContainer.innerHTML = '';
                 betsContainer.innerHTML = '';
+                betBuilderContainer.innerHTML = '';
                 statsContent.innerHTML = `
                     <div class="error">Erro ao carregar estatísticas</div>
                     <div class="error-details">${error.message}</div>
@@ -1386,4 +1466,3 @@
     </script>
 </body>
 </html>
-</xaiArtifact
