--- a/NBA.html
+++ b/NBA.html
@@ -908,7 +908,7 @@
             const homeSeo = homeName.toLowerCase().replace(/\s+/g, '-');
             const awaySeo = awayName.toLowerCase().replace(/\s+/g, '-');
             const formattedDate = date.replace(/-/g, '-');
-            const url = `https://www.sportsgambler.com/betting-tips/basketball/${homeSeo}-vs-${awaySeo}-prediction-bet-builder-tips-odds-${formattedDate}/#predictions`;
+            const url = `https://www.sportsgambler.com/betting-tips/basketball/${awaySeo}-vs-${homeSeo}-prediction-bet-builder-tips-odds-${formattedDate}/#predictions`;
             const proxyUrl = `https://api.allorigins.win/raw?url=${encodeURIComponent(url)}`;
 
             try {
