--- a/NBA.html
+++ b/NBA.html
@@ -631,13 +631,13 @@
             color: #06B6D4;
         }
 
-        .injuries-grid, .bets-grid, .betbuilder-grid {
+        .injuries-grid, .bets-grid, .betting-tips-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             gap: 16px;
         }
 
-        .injury-team, .bet-item, .betbuilder-item {
+        .injury-team, .bet-item, .betting-tip-item {
             display: flex;
             align-items: center;
             gap: 12px;
@@ -648,13 +648,13 @@
             box-shadow: 0 1px 6px rgba(0, 0, 0, 0.2);
         }
 
-        .injury-team:hover, .bet-item:hover, .betbuilder-item:hover {
+        .injury-team:hover, .bet-item:hover, .betting-tip-item:hover {
             background: linear-gradient(45deg, #2A2A2A, #333333);
             transform: translateY(-2px);
             box-shadow: 0 4px 12px rgba(107, 33, 168, 0.2);
         }
 
-        .injury-icon, .bet-icon, .betbuilder-icon {
+        .injury-icon, .bet-icon, .betting-tip-icon {
             font-size: 20px;
         }
 
@@ -662,15 +662,15 @@
             color: #EF4444;
         }
 
-        .bet-icon, .betbuilder-icon {
-            color: #FBBF24;
+        .bet-icon, .betting-tip-icon {
+            color: #06B6D4;
         }
 
-        .injury-info, .bet-info, .betbuilder-info {
+        .injury-info, .bet-info, .betting-tip-info {
             flex-grow: 1;
         }
 
-        .injury-info .name, .bet-info .type, .betbuilder-info .type {
+        .injury-info .name, .bet-info .type, .betting-tip-info .type {
             display: block;
             font-size: 14px;
             font-weight: 600;
@@ -682,39 +682,47 @@
             color: #EF4444;
         }
 
-        .injury-info .date, .bet-info .value, .betbuilder-info .value {
+        .injury-info .date, .bet-info .value, .betting-tip-info .value {
             font-size: 12px;
             color: #A1A1AA;
         }
 
-        .betbuilder-container {
-            padding: 20px;
-            background: #1A1A1A;
-            border-radius: 12px;
-            margin-bottom: 20px;
-            box-shadow: 0 2px 12px rgba(0, 0, 0, 0.3);
+        .betting-tip-description {
+            font-size: 12px;
+            color: #E5E7EB;
+            margin-top: 8px;
         }
 
-        .betbuilder-title {
-            font-family: 'Orbitron', sans-serif;
-            font-size: 20px;
-            text-align: center;
-            margin-bottom: 20px;
+        .betting-tip-button {
+            background: linear-gradient(45deg, #14805e, #1a9c6e);
+            border: none;
+            padding: 8px 16px;
+            border-radius: 8px;
             color: #FFFFFF;
-            letter-spacing: 1px;
+            font-family: 'Inter', sans-serif;
+            font-size: 14px;
+            font-weight: 600;
             text-transform: uppercase;
-            position: relative;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            box-shadow: 0 2px 8px rgba(20, 128, 94, 0.3);
+            text-align: center;
+            margin-top: 12px;
+            display: inline-block;
+            text-decoration: none;
         }
 
-        .betbuilder-title::after {
-            content: '';
-            position: absolute;
-            bottom: -4px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 60px;
-            height: 2px;
-            background: linear-gradient(90deg, transparent, #6B21A8, transparent);
+        .betting-tip-button:hover {
+            background: linear-gradient(45deg, #1a9c6e, #14805e);
+            box-shadow: 0 4px 12px rgba(20, 128, 94, 0.5);
+            transform: translateY(-2px);
+        }
+
+        .tc-content {
+            font-size: 12px;
+            color: #A1A1AA;
+            text-align: center;
+            margin-top: 12px;
         }
 
         .error-details {
@@ -821,9 +829,9 @@
                 <div class="section-title">Possíveis Entradas</div>
                 <div class="bets-grid" id="betsGrid"></div>
             </div>
-            <div class="section-container" id="betBuilderContainer">
-                <div class="betbuilder-title">Bet Builder Tips</div>
-                <div class="betbuilder-grid" id="betBuilderGrid"></div>
+            <div class="section-container" id="bettingTipsContainer">
+                <div class="section-title">Dicas de Apostas</div>
+                <div class="betting-tips-grid" id="bettingTipsGrid"></div>
             </div>
         </div>
     </div>
@@ -834,7 +842,7 @@
         const leadersGrid = document.querySelector('#leadersGrid');
         const injuriesGrid = document.querySelector('#injuriesGrid');
         const betsGrid = document.querySelector('#betsGrid');
-        const betBuilderGrid = document.querySelector('#betBuilderGrid');
+        const bettingTipsGrid = document.querySelector('#bettingTipsGrid');
         const scheduleDiv = document.querySelector('#schedule');
         let currentDate = null;
         let autoUpdateInterval = null;
@@ -848,7 +856,7 @@
         const statsContent = document.querySelector('#statsContent');
         const injuriesContainer = document.querySelector('#injuriesContainer');
         const betsContainer = document.querySelector('#betsContainer');
-        const betBuilderContainer = document.querySelector('#betBuilderContainer');
+        const bettingTipsContainer = document.querySelector('#bettingTipsContainer');
         const closeModalBtn = document.querySelector('#closeModal');
 
         function createParticles() {
@@ -901,35 +909,6 @@
             } catch (error) {
                 console.error('Error fetching injuries:', error);
                 throw error;
-            }
-        }
-
-        async function fetchBetBuilderTips(homeName, awayName, date) {
-            const homeSeo = homeName.toLowerCase().replace(/\s+/g, '-');
-            const awaySeo = awayName.toLowerCase().replace(/\s+/g, '-');
-            const formattedDate = date.replace(/-/g, '-');
-            const url = `https://www.sportsgambler.com/betting-tips/basketball/${awaySeo}-vs-${homeSeo}-prediction-bet-builder-tips-odds-${formattedDate}/#predictions`;
-            const proxyUrl = `https://api.allorigins.win/raw?url=${encodeURIComponent(url)}`;
-
-            try {
-                const response = await fetch(proxyUrl);
-                if (!response.ok) throw new Error(`HTTP error! Status: ${response.status}`);
-
-                const htmlText = await response.text();
-                const parser = new DOMParser();
-                const doc = parser.parseFromString(htmlText, 'text/html');
-
-                const betBuilderItems = doc.querySelectorAll('.betbuilder .bb_list .bb_list_item');
-                const tips = Array.from(betBuilderItems).map(item => {
-                    const type = item.children[0]?.textContent.trim() || 'N/A';
-                    const value = item.children[1]?.textContent.trim() || 'N/A';
-                    return { type, value };
-                });
-
-                return tips.length > 0 ? tips : [{ type: 'N/A', value: 'Nenhum dado disponível' }];
-            } catch (error) {
-                console.error('Error fetching Bet Builder Tips:', error);
-                return [{ type: 'Erro', value: 'Não foi possível carregar as dicas de apostas' }];
             }
         }
 
@@ -1164,6 +1143,40 @@
             }, 30000);
         }
 
+        function renderBettingTips(homeName, awayName) {
+            // Dados estáticos para o jogo Boston Celtics vs Orlando Magic
+            const isCelticsVsMagic = (homeName === "Orlando Magic" && awayName === "Boston Celtics") || (homeName === "Boston Celtics" && awayName === "Orlando Magic");
+            if (isCelticsVsMagic) {
+                const bettingTips = [
+                    { type: "Totais", value: "Over 199.5" },
+                    { type: "Spread", value: "Magic +7.5" },
+                    { type: "Pontos do Jogador", value: "Paolo Banchero Under 29.5" }
+                ];
+
+                bettingTipsGrid.innerHTML = `
+                    ${bettingTips.map(tip => `
+                        <div class="betting-tip-item">
+                            <span class="betting-tip-icon">🎰</span>
+                            <div class="betting-tip-info">
+                                <span class="type">${tip.type}</span>
+                                <span class="value">${tip.value}</span>
+                            </div>
+                        </div>
+                    `).join('')}
+                    <div style="grid-column: 1 / -1;">
+                        <div class="betting-tip-description">
+                            Nós preparamos uma aposta combinada com as escolhas de Over 199.5, Magic +7.5 e Paolo Banchero (Magic) marcando Under 29.5 pontos.<br>
+                            Recomendamos uma aposta combinada, pois é uma forma emocionante de apostar em um único evento. Muitos apostadores gostam de criar uma aposta personalizada que reflete suas previsões para o jogo.
+                        </div>
+                        <a href="https://www.sportsgambler.com/betting-sites/go/bet365/sport?utm_campaign=sgc" class="betting-tip-button">Bet Boosts</a>
+                        <div class="tc-content">T&C aplicáveis. Jogue com responsabilidade 18+</div>
+                    </div>
+                `;
+            } else {
+                bettingTipsGrid.innerHTML = '<div style="grid-column: 1 / -1; text-align: center; color: #A1A1AA;">Dicas de apostas não disponíveis para este jogo.</div>';
+            }
+        }
+
         async function showGameStats(eventId, homeName, awayName, homeSeoIdentifier, awaySeoIdentifier) {
             try {
                 const scheduleData = await fetchSchedule(currentDate);
@@ -1185,9 +1198,6 @@
 
                 playerData = await fetchPlayerSeasonStats(eventId);
                 injuriesData = await fetchInjuries();
-
-                // Buscar as dicas de apostas (Bet Builder Tips)
-                const betBuilderTips = await fetchBetBuilderTips(homeName, awayName, currentDate);
 
                 modalTitle.textContent = `${homeName} vs ${awayName}`;
                 homeTeamName.textContent = homeName;
@@ -1370,16 +1380,8 @@
                     </div>
                 `).join('');
 
-                // Renderizar Bet Builder Tips
-                betBuilderGrid.innerHTML = betBuilderTips.map(tip => `
-                    <div class="betbuilder-item">
-                        <span class="betbuilder-icon">🎯</span>
-                        <div class="betbuilder-info">
-                            <span class="type">${tip.type}</span>
-                            <span class="value">${tip.value}</span>
-                        </div>
-                    </div>
-                `).join('');
+                // Render betting tips for the specific game
+                renderBettingTips(homeName, awayName);
 
                 // Render game stats
                 if ((statsData && (statsData.away || statsData.home)) || (playerData && (playerData.away || playerData.home))) {
@@ -1400,7 +1402,7 @@
                         { label: '% DE ARREMESSOS CERTOS', home: statsData.home?.stats?.fieldGoalsPercentage ? `${(parseFloat(statsData.home.stats.fieldGoalsPercentage) * 100).toFixed(1)}%` : 'N/A', away: statsData.away.stats?.fieldGoalsPercentage ? `${(parseFloat(statsData.away.stats.fieldGoalsPercentage) * 100).toFixed(1)}%` : 'N/A' },
                         { label: '% DE LANCES LIVRES', home: statsData.home?.stats?.freeThrowsPercentage ? `${(parseFloat(statsData.home.stats.freeThrowsPercentage) * 100).toFixed(1)}%` : 'N/A', away: statsData.away.stats?.freeThrowsPercentage ? `${(parseFloat(statsData.away.stats.freeThrowsPercentage) * 100).toFixed(1)}%` : 'N/A' },
                         { label: '% DE ARREMESSOS DE 3 PONTOS', home: statsData.home?.stats?.threePointPercentage ? `${(parseFloat(statsData.home.stats.threePointPercentage) * 100).toFixed(1)}%` : 'N/A', away: statsData.away.stats?.threePointPercentage ? `${(parseFloat(statsData.away.stats.threePointPercentage) * 100).toFixed(1)}%` : 'N/A' },
-                        { label: 'REBOTES POR JOGO', home: statsData.home?.stats?.reboundsPerGame || 'N/A', away: statsData.away.stats?.reboundsPerGame || 'N/A' },
+                        { label: 'REBOTES POR JOGO', home: statsData.home?.stats?.reboundsPerGame || 'N/A', away: statsData.away?.stats?.reboundsPerGame || 'N/A' },
                         { label: 'ASSISTÊNCIAS POR JOGO', home: statsData.home?.stats?.assistsPerGame || 'N/A', away: statsData.away?.stats?.assistsPerGame || 'N/A' },
                         { label: 'TOCOS POR JOGO', home: statsData.home?.stats?.blocksPerGame || 'N/A', away: statsData.away?.stats?.blocksPerGame || 'N/A' },
                         { label: 'ROUBOS DE BOLA POR JOGO', home: statsData.home?.stats?.stealsPerGame || 'N/A', away: statsData.away?.stats?.stealsPerGame || 'N/A' },
@@ -1439,7 +1441,7 @@
                 teamLeadersContainer.innerHTML = '';
                 injuriesContainer.innerHTML = '';
                 betsContainer.innerHTML = '';
-                betBuilderContainer.innerHTML = '';
+                bettingTipsContainer.innerHTML = '';
                 statsContent.innerHTML = `
                     <div class="error">Erro ao carregar estatísticas</div>
                     <div class="error-details">${error.message}</div>
